# clipboard-doi

./: README.md  pyproject.toml
copy_doi/: bibcure.py  doi  main.py
tests/: test_copy_doi.py
